# exif-editor

./: Cargo.toml  README.md
assets/: logo.af  logo.icns
demo_images/: IMG_0205.HEIC
scripts/: package_dmg.sh
src/: app.rs  http.rs  lib.rs  main.rs
src/core/: bulk.rs  formats.rs  metadata.rs  mod.rs  presets.rs  thumbnail.rs
src/models/: mod.rs  operation.rs  photo.rs  preset.rs  tag.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/ui/: window.rs
src/ui/window/: actions.rs  mod.rs  popups.rs  render_media.rs  render_metadata.rs  render_shell.rs  state.rs  tag_rows.rs  utils.rs
tests/: app_phase_tests.rs  bulk_tests.rs  metadata_tests.rs  preset_tests.rs
