[package]
name = "Exif-Editor"
version = "0.1.0"
edition = "2021"
description = "Cross-platform photo metadata editor and stripper"
license = "MIT"

[lib]
name = "exif_editor"
path = "src/lib.rs"

[[bin]]
name = "exif_editor"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
anyhow = "1"
gpui_http_client = "0.2.2"
little_exif = "0.6"
chrono = "0.4"
rayon = "1.10"
reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-text = "=21.0.0"

[package.metadata.bundle]
name = "Exif Editor"
identifier = "com.stelath.exif-editor"
icon = ["assets/logo.icns"]
version = "0.1.0"
copyright = "Copyright (c) 2026 Alex. MIT License."
short_description = "A native photo metadata editor for macOS"
long_description = "View, edit, and strip EXIF/IPTC/XMP metadata from photos with a fast, GPU-accelerated native interface."
